# smart-mediator-assignment

./: .gitignore  README.md  pyproject.toml
src/smart_mediator_assignment/: __init__.py  config.py
src/smart_mediator_assignment.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
src/smart_mediator_assignment/algorithm/: __init__.py  bayesian.py  phantom.py  strategies.py  va_estimation.py
src/smart_mediator_assignment/assignment/: __init__.py  recommender.py
src/smart_mediator_assignment/core/: __init__.py  belief.py  case.py  mediator.py  types.py
src/smart_mediator_assignment/solver/: __init__.py  base.py  lp_solver.py
tests/: test_va_estimation.py
tests/fixtures/: __init__.py  scenario1.py  scenario2.py
tests/integration/: test_full_pipeline.py
tests/unit/: test_bayesian.py  test_lp_solver.py  test_phantom.py  test_recommender.py
