[project]
name = "smart-mediator-assignment"
version = "0.1.0"
description = "LP-based mediator assignment algorithm for court mediation systems"
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}
authors = [
    {name = "Kenya Mediation Team"}
]
dependencies = [
    "pulp>=2.7.0",
    "numpy>=1.24.0",
    "scipy>=1.10.0",
    "pandas>=2.0.0",
    "statsmodels>=0.14.0",
    "linearmodels>=6.0",
]

[project.optional-dependencies]
gurobi = ["gurobipy>=10.0.0"]
dev = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/smart_mediator_assignment"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_functions = ["test_*"]

[dependency-groups]
dev = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
]
